# QQ_replica_project_based_on_Qt5_in_CLion

./: CMakeLists.txt  ChatManager.cpp  ChatManager.h  DeveloperPage.cpp  DeveloperPage.h  DeveloperPage.ui  MyClient.cpp  MyClient.h  MyServer.cpp  MyServer.h  README.en.md  README.md  addpage.cpp  addpage.h  addpage.ui  appconfig.cpp  appconfig.h  chatpage.cpp  chatpage.h  chatpage.ui  createpage.cpp  createpage.h  createpage.ui  databasemanager.cpp  databasemanager.h  dynamicgradientbg.cpp  dynamicgradientbg.h  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  mainpage.cpp  mainpage.h  mainpage.ui  poolmanager.cpp  poolmanager.h  protocol.cpp  protocol.h  res.qrc
